--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     --color-primario: #005288;
     --color-secundario:#D93232;
     --color-blanco:#FBFCFC;
+    --color-negro:#07051A;
     --font-family:'Poppins', sans-serif;
 }
   
@@ -14,18 +15,36 @@
 html{
     font-size: 62.5%;
     font-family: var(--font-family);
+    color: var(--color-negro);
 }
-
+/* Estilo de la barra de desplazamiento */
+::-webkit-scrollbar {
+    width: 8px; /* Ancho de la barra de desplazamiento */
+    transition: opacity 5s ease-in-out;
+  }
+  
+  /* Estilo del pulgar de la barra de desplazamiento */
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--color-primario); /* Color del pulgar */
+  }
+  
+  /* Estilo de la pista de la barra de desplazamiento */
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Color de la pista */
+  }
 body {
     margin: 0;
     padding: 0;
     min-height: 100vh; /* Altura mínima del viewport */
     display: flex;
     flex-direction: column;
+
 }
 
 /*-----------------header-----------------*/
 header{
+    position: sticky;
+    top: 0; /* Fija el header en la parte superior */
     display: flex;
     justify-content: space-between;
     min-height: 100%;
@@ -67,7 +86,7 @@ header ul{
 .menu {
     width: 200px;
     height: 100%;
-    background-color: #333;
+    background-color: var(--color-negro);
     position: fixed;
     top: 0;
     right: -200px; /* Menú oculto por defecto */
@@ -94,8 +113,13 @@ header ul{
 /*------sections del main------------*/
 main{
     height:fit-content;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 main section{
+    /* width: 70em;
+    max-width: 200em; */
     padding: 1em;
     font-size: 1.6rem;
     margin: 4px;
