--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
     min-height: 100vh; /* Altura mínima del viewport */
     display: flex;
     flex-direction: column;
-
+    background-color: var(--color-blanco);
 }
 
 /*-----------------header-----------------*/
